tests/vertical-slice/accept/gen_block_yields_and_returns.hew
// Accept fixture: gen{} with both yield expressions and a tail-expression return.
// `gen { yield 1; 2 }` produces Generator<i64, i64>: Yield inferred from
// `yield 1`, Return inferred from the tail expression `2`.
// HIR/MIR lowering is still fail-closed on GenBlock; hew check exercises
// only the type-checker accept path.
fn main() {
    let _g = gen { yield 1; 2 };
}
